--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,6 +3,10 @@
 @import 'mixin';
 @import 'function';
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body {
 	margin:0;
 	padding:0;
@@ -80,5 +84,5 @@ video {
 	width:100%;
 	min-width: 100%;
 	min-height: 100%;
-	
+
 }
